# security-agent

./: .env.example  .gitignore  .mypy_after_p0p1.txt  .mypy_check.txt  .mypy_current.txt  .pre-commit-config.yaml  192.168.254.121.txt  README.md  _api.err  _test_fixes.py  id_rsa  pyproject.toml  session_record.md  安全AI_Agent开发计划_v1.1.md  安全AI_Agent项目开发文档.docx  安全AI_Agent项目开发文档.md  服务快速调用表.md
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
agent/: Makefile  _p_b34.py  build.ps1  go.mod  go.sum
agent/cmd/agent/: main.go
agent/internal/comm/: client.go  client_test.go
agent/internal/config/: config.go  config_test.go
agent/internal/crypto/: verify.go  verify_test.go
agent/internal/enroll/: enroll.go  enroll_test.go
agent/internal/protection/: protection.go  protection_test.go
agent/internal/queue/: queue.go  queue_test.go
agent/internal/resource/: monitor.go  monitor_test.go
agent/internal/scan/: collector.go  collector_test.go  engine.go  matcher.go  matcher_test.go  rules.go
agent/internal/updater/: upgrade.go  upgrade_test.go
agent/internal/version/: version.go
agent/packaging/: agent.service  install.ps1  install.sh
deployments/baseline-rules/: extra-baseline.yaml
deployments/docker/: Dockerfile.sandbox  create-sandbox-net.bat  create-sandbox-net.sh  docker-compose.dev.yml
deployments/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.yaml  service.yaml
deployments/prod/: .env.example  README.md  build-images.sh  check-env.sh  docker-compose.yml  package-agent.sh  push-nacos-config.sh
deployments/prod/docker/: Dockerfile.api  Dockerfile.frontend  entrypoint.sh  init-nacos.sh  init-pg.sql  nacos-config.yaml  nginx.conf
docs/: ARCH_REFACTOR_P0.md  ARCH_REFACTOR_P2.md  PROJECT_TREE.md  README.md  SecAgent功能演示.pptx  deployment-guide.md  gen_pptx.js  代码知识图谱.md  企业级AI增强主机漏洞扫描系统设计方案.md  前后端开发文档.md  功能测试文档.md  功能演示讲解20260723.md  后续计划V3.md  后续计划V5.md  后续计划V6.md  后续计划V7.md  后续计划V8.md  工程化路线图.md  服务快速调用表.md  架构改造设计.md  漏洞扫描子系统开发文档.md  漏洞扫描子系统开发方案.md  漏洞扫描子系统检查报告.md  进度说明.md  项目审查V3.md  项目审查V5.md  项目审查V8.md  项目情况分析.md  项目架构与流程说明.md  项目梳理.md  项目测试报告.md
docs/archive/: 修复计划V4.md  功能演示讲解.html  后续计划.md  后续计划V2.md  计划v1.md  计划v2.md  项目审查V1.md  项目审查V2.md  项目审查V4.md  项目审查V6.md  项目审查V7.md  项目测试方案.md
docs/demo-screenshots/: README.md
frontend/: index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts  schema.ts
frontend/src/components/: AppLayout.tsx  ChatScan.css  ChatScan.tsx  ErrorBoundary.tsx  TargetSelector.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: ApprovalsPage.tsx  DashboardPage.tsx  EventDetailPage.tsx  EventQueuePage.tsx  HostOnboardPage.tsx  LoginPage.tsx  ModelsPage.tsx  RulesPage.tsx  ScanMonitorPage.tsx  ScanReportPage.tsx  ScanTaskPage.tsx  VulnListPage.tsx
scripts/: build_sandbox.py  check_connectivity.py  decision_record.py  dedup_validator.py  gen_deploy_guide.py  gen_e2e_test.py  gen_frontend.py  gen_k8s.py  gen_openapi.py  gen_pages.py  healthcheck.sh  import_attack_stix.py  ingest_knowledge.py  ingest_neo4j_to_milvus.py  integrate_memory.py  proxy_test.py  smoke_test.py  sprint1_test.py  stress_test_preprocessing.py  test_deepseek.py  test_imports.py  update_adapter.py  update_config.py  update_main.py  update_settings.py
scripts/archive/: build_sandbox_v2.py  fix_p2_issues.py  fix_remaining.py  fix_review_issues.py  fix_rule.py  fix_settings.py  fix_test_assert.py  fix_tests.py  fix_v2_issues.py  fix_vuln_hunter.py  remote_debug.py  remote_final.py  remote_final_v2.py  remote_finalize.py  remote_fix.py  remote_setup.py
src/agents/: conversation.py  enroll.py  manager.py  models.py  revoke.py  rules_sync.py  scheduler.py  signing.py  store.py  upgrade.py  ws_gateway.py
src/agents/chat_kb/: __init__.py  engine.py
src/agents/chat_search/: web_search.py
src/api/: _ws_auth.py  events_bus.py  main.py  store.py  store_es.py
src/api/auth/: __init__.py  jwt.py  routes.py  sse_tokens.py
src/api/routers/: agents.py  chat.py  demo.py  models.py  operations.py  rules.py  scan_chat.py  stream.py  vulnscan.py
src/common/: celery_app.py
src/common/audit/: audit_logger.py
src/orchestration/: runner.py
src/preprocessing/: consumer.py
tests/: conftest.py
tests/e2e/: test_scenarios.py
tests/integration/: test_deployment_artifacts.py  test_investigation.py  test_nacos_loading.py
(+290 files in other folders)
