[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "security-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.2.28",
    "langchain==0.3.7",
    "langchain-anthropic==0.3.0",
    "langchain-openai==0.2.9",
    "langchain-community==0.3.7",
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "aiokafka==0.11.0",
    "pymilvus==2.4.9",
    "neo4j==5.26.0",
    "redis==5.2.0",
    "elasticsearch==8.15.1",
    "celery==5.4.0",
    "watchdog==5.0.3",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "stix2==3.0.1",
    "PyYAML==6.0.2",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "testcontainers==4.8.2",
    "ruff==0.7.3",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "bandit==1.7.10",
    "safety==3.2.11",
    "httpx==0.27.2",
    "faker==30.8.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]
