[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph==0.2.28",
    "langchain==0.3.7",
    "langchain-anthropic==0.3.0",
    "langchain-openai==0.2.9",
    "langchain-community==0.3.7",
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "aiokafka==0.11.0",
    "pymilvus==2.4.9",
    "neo4j==5.26.0",
    "redis==5.2.0",
    "elasticsearch==8.15.1",
    "celery==5.4.0",
    "watchdog==5.0.3",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "stix2==3.0.1",
    "PyYAML==6.0.2",
    "sentence-transformers==3.3.1",
    "structlog==24.4.0",
    "docker==7.2.0",
    "asyncpg==0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "testcontainers==4.8.2",
    "ruff==0.7.3",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "bandit==1.7.10",
    "safety==3.2.11",
    "httpx==0.27.2",
    "faker==30.8.2",
    "types-PyYAML==6.0.12.20260518",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# V4.1 (P1-5): align ruff with mypy.exclude -- tests/ is excluded by mypy,
# so ruff should match. Keeps the 22 hygiene warnings out of CI parity checks.
extend-exclude = ["tests", "scripts", "frontend", "agent", "deployments", "docs", ".venv", ".venv312", ".goworks", ".mypy_cache", ".ruff_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
# Practical relaxations: keep all bug-detection checks, drop the annotation
# mandates that fight LangGraph TypedDict nodes / structlog / dynamic glue.
disallow_any_generics = false
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = "src.knowledge.models.adapter"
# langchain ChatAnthropic/ChatOpenAI constructor stubs don't match actual kwargs
# (model/max_tokens/api_key/**kwargs); runtime is correct, so silence here.
# V4.1 (P0-4): with_structured_output lives on chat-model subclasses, not on
# the generic Runnable stub mypy sees; same class of mismatch as the others.
disable_error_code = ["call-arg", "arg-type", "assignment", "attr-defined"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]